[gd_scene load_steps=6 format=2]

[ext_resource path="res://gfx/UI/Fonts/AmaticSC-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src_and_scenes/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://src_and_scenes/Settings.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.384314, 0.360784, 0.360784, 0.921569 )

[node name="TitleMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = 200.0
margin_right = 301.0
margin_bottom = -438.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Resume" type="Button" parent="."]
margin_left = 262.0
margin_top = 436.0
margin_right = 421.0
margin_bottom = 503.0
rect_pivot_offset = Vector2( -1293, -583 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
expand_icon = true

[node name="Retry" type="Button" parent="."]
margin_left = 459.0
margin_top = 437.0
margin_right = 581.0
margin_bottom = 504.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Retry"
expand_icon = true

[node name="Restart" type="Button" parent="."]
margin_left = 664.0
margin_top = 439.0
margin_right = 844.0
margin_bottom = 506.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Restart Level"
expand_icon = true

[node name="HowToPlay" type="Button" parent="."]
margin_left = 939.0
margin_top = 436.0
margin_right = 1098.0
margin_bottom = 503.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
expand_icon = true

[node name="HowToPlay2" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_HowToPlay_pressed"]
